// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot: 0 1`] = `" (c = 0)"`;

exports[`snapshot: 1 1`] = `
"1,1,0 (c = 32)
--0,1,1 (c = 32)
---- (c = 0)
----0 (c = 4)
------ (c = 0)
----0,1 (c = 18)
------ (c = 0)
------0 (c = 4)
-------- (c = 0)
------1 (c = 14)
-------- (c = 0)
--------0 (c = 4)
---------- (c = 0)
------0,0 (c = 8)
-------- (c = 0)
--------0 (c = 4)
---------- (c = 0)
--------0 (c = 4)
---------- (c = 0)
----1 (c = 14)
------ (c = 0)
------0 (c = 4)
-------- (c = 0)
----1 (c = 14)
------ (c = 0)
------0 (c = 4)
-------- (c = 0)
----0,1 (c = 18)
------ (c = 0)
------0 (c = 4)
-------- (c = 0)
------1 (c = 14)
-------- (c = 0)
--------0 (c = 4)
---------- (c = 0)
------0,0 (c = 8)
-------- (c = 0)
--------0 (c = 4)
---------- (c = 0)
--------0 (c = 4)
---------- (c = 0)
----1,1 (c = 28)
------ (c = 0)
------1 (c = 14)
-------- (c = 0)
--------0 (c = 4)
---------- (c = 0)
------1 (c = 14)
-------- (c = 0)
--------0 (c = 4)
---------- (c = 0)
------0,1 (c = 18)
-------- (c = 0)
--------0 (c = 4)
---------- (c = 0)
--------1 (c = 14)
---------- (c = 0)
----------0 (c = 4)
------------ (c = 0)
--------0,0 (c = 8)
---------- (c = 0)
----------0 (c = 4)
------------ (c = 0)
----------0 (c = 4)
------------ (c = 0)
------1,0 (c = 18)
--------0,1 (c = 18)
---------- (c = 0)
----------0 (c = 4)
------------ (c = 0)
----------1 (c = 14)
------------ (c = 0)
------------0 (c = 4)
-------------- (c = 0)
----------0,0 (c = 8)
------------ (c = 0)
------------0 (c = 4)
-------------- (c = 0)
------------0 (c = 4)
-------------- (c = 0)
-------- (c = 0)
--------0 (c = 4)
---------- (c = 0)
--------1 (c = 14)
---------- (c = 0)
----------0 (c = 4)
------------ (c = 0)
--------0,0 (c = 8)
---------- (c = 0)
----------0 (c = 4)
------------ (c = 0)
----------0 (c = 4)
------------ (c = 0)
----0,0,1 (c = 22)
------ (c = 0)
------0 (c = 4)
-------- (c = 0)
------0,0 (c = 8)
-------- (c = 0)
--------0 (c = 4)"
`;

exports[`snapshot: 2 1`] = `
"0 (c = 4)
-- (c = 0)"
`;

exports[`snapshot: 3 1`] = `
"1,3,2,1,1,0,3 (c = 138)
--0,1,1,1,2,3,3 (c = 138)
---- (c = 0)
----0,1,1 (c = 32)
------ (c = 0)
------0 (c = 4)
-------- (c = 0)
------0,1 (c = 18)
-------- (c = 0)
--------0 (c = 4)
---------- (c = 0)
--------1 (c = 14)
---------- (c = 0)
----------0 (c = 4)
------------ (c = 0)
--------0,0 (c = 8)
---------- (c = 0)
----------0 (c = 4)
------------ (c = 0)
----------0 (c = 4)
------------ (c = 0)
------1 (c = 14)
-------- (c = 0)
--------0 (c = 4)
---------- (c = 0)
------1 (c = 14)
-------- (c = 0)
--------0 (c = 4)
---------- (c = 0)
------0,1 (c = 18)
-------- (c = 0)
--------0 (c = 4)
---------- (c = 0)
--------1 (c = 14)
---------- (c = 0)
----------0 (c = 4)
------------ (c = 0)
--------0,0 (c = 8)
---------- (c = 0)
----------0 (c = 4)
------------ (c = 0)
----------0 (c = 4)
------------ (c = 0)
------1,1 (c = 28)
-------- (c = 0)
--------1 (c = 14)
---------- (c = 0)
----------0 (c = 4)
------------ (c = 0)
--------1 (c = 14)
---------- (c = 0)
----------0 (c = 4)
------------ (c = 0)
--------0,1 (c = 18)
---------- (c = 0)
----------0 (c = 4)
------------ (c = 0)
----------1 (c = 14)
------------ (c = 0)
------------0 (c = 4)
-------------- (c = 0)
----------0,0 (c = 8)
------------ (c = 0)
------------0 (c = 4)
-------------- (c = 0)
------------0 (c = 4)
-------------- (c = 0)
--------1,0 (c = 18)
----------0,1 (c = 18)
------------ (c = 0)
------------0 (c = 4)
-------------- (c = 0)
------------1 (c = 14)
-------------- (c = 0)
--------------0 (c = 4)
---------------- (c = 0)
------------0,0 (c = 8)
-------------- (c = 0)
--------------0 (c = 4)
---------------- (c = 0)
--------------0 (c = 4)
---------------- (c = 0)
---------- (c = 0)
----------0 (c = 4)
------------ (c = 0)
----------1 (c = 14)
------------ (c = 0)
------------0 (c = 4)
-------------- (c = 0)
----------0,0 (c = 8)
------------ (c = 0)
------------0 (c = 4)
-------------- (c = 0)
------------0 (c = 4)
-------------- (c = 0)
------0,0,1 (c = 22)
-------- (c = 0)
--------0 (c = 4)
---------- (c = 0)
--------0,0 (c = 8)"
`;

exports[`snapshot: 4 1`] = `
"1,4,3,4,0 (c = 140)
--0,1,3,4,4 (c = 140)
---- (c = 0)
----0,1 (c = 18)
------ (c = 0)
------0 (c = 4)
-------- (c = 0)
------1 (c = 14)
-------- (c = 0)
--------0 (c = 4)
---------- (c = 0)
------0,0 (c = 8)
-------- (c = 0)
--------0 (c = 4)
---------- (c = 0)
--------0 (c = 4)
---------- (c = 0)
----0,1,3 (c = 52)
------ (c = 0)
------0 (c = 4)
-------- (c = 0)
------0,1 (c = 18)
-------- (c = 0)
--------0 (c = 4)
---------- (c = 0)
--------1 (c = 14)
---------- (c = 0)
----------0 (c = 4)
------------ (c = 0)
--------0,0 (c = 8)
---------- (c = 0)
----------0 (c = 4)
------------ (c = 0)
----------0 (c = 4)
------------ (c = 0)
------1 (c = 14)
-------- (c = 0)
--------0 (c = 4)
---------- (c = 0)
------3 (c = 34)
-------- (c = 0)
--------0 (c = 4)
---------- (c = 0)
--------1 (c = 14)
---------- (c = 0)
----------0 (c = 4)
------------ (c = 0)
--------2 (c = 24)
---------- (c = 0)
----------0 (c = 4)
------------ (c = 0)
----------1 (c = 14)
------------ (c = 0)
------------0 (c = 4)
-------------- (c = 0)
------0,3 (c = 38)
-------- (c = 0)
--------0 (c = 4)
---------- (c = 0)
--------3 (c = 34)
---------- (c = 0)
----------0 (c = 4)
------------ (c = 0)
----------1 (c = 14)
------------ (c = 0)
------------0 (c = 4)
-------------- (c = 0)
----------2 (c = 24)
------------ (c = 0)
------------0 (c = 4)
-------------- (c = 0)
------------1 (c = 14)
-------------- (c = 0)
--------------0 (c = 4)
---------------- (c = 0)
--------0,0 (c = 8)
---------- (c = 0)
----------0 (c = 4)
------------ (c = 0)
----------0 (c = 4)
------------ (c = 0)
--------0,1 (c = 18)
---------- (c = 0)
----------0 (c = 4)
------------ (c = 0)
----------1 (c = 14)
------------ (c = 0)
------------0 (c = 4)
-------------- (c = 0)
----------0,0 (c = 8)
------------ (c = 0)
------------0 (c = 4)
-------------- (c = 0)
------------0 (c = 4)
-------------- (c = 0)
--------0,2 (c = 28)
---------- (c = 0)
----------0 (c = 4)
------------ (c = 0)
----------2 (c = 24)"
`;

exports[`snapshot: 5 1`] = `
"3,3,4,3,5,2,1 (c = 238)
--1,2,3,3,3,4,5 (c = 238)
---- (c = 0)
----1,2,3 (c = 72)
------ (c = 0)
------1 (c = 14)
-------- (c = 0)
--------0 (c = 4)
---------- (c = 0)
------1,2 (c = 38)
-------- (c = 0)
--------1 (c = 14)
---------- (c = 0)
----------0 (c = 4)
------------ (c = 0)
--------2 (c = 24)
---------- (c = 0)
----------0 (c = 4)
------------ (c = 0)
----------1 (c = 14)
------------ (c = 0)
------------0 (c = 4)
-------------- (c = 0)
--------0,2 (c = 28)
---------- (c = 0)
----------0 (c = 4)
------------ (c = 0)
----------2 (c = 24)
------------ (c = 0)
------------0 (c = 4)
-------------- (c = 0)
------------1 (c = 14)
-------------- (c = 0)
--------------0 (c = 4)
---------------- (c = 0)
----------0,0 (c = 8)
------------ (c = 0)
------------0 (c = 4)
-------------- (c = 0)
------------0 (c = 4)
-------------- (c = 0)
----------0,1 (c = 18)
------------ (c = 0)
------------0 (c = 4)
-------------- (c = 0)
------------1 (c = 14)
-------------- (c = 0)
--------------0 (c = 4)
---------------- (c = 0)
------------0,0 (c = 8)
-------------- (c = 0)
--------------0 (c = 4)
---------------- (c = 0)
--------------0 (c = 4)
---------------- (c = 0)
--------1,0 (c = 18)
----------0,1 (c = 18)
------------ (c = 0)
------------0 (c = 4)
-------------- (c = 0)
------------1 (c = 14)
-------------- (c = 0)
--------------0 (c = 4)
---------------- (c = 0)
------------0,0 (c = 8)
-------------- (c = 0)
--------------0 (c = 4)
---------------- (c = 0)
--------------0 (c = 4)
---------------- (c = 0)
---------- (c = 0)
----------0 (c = 4)
------------ (c = 0)
----------1 (c = 14)
------------ (c = 0)
------------0 (c = 4)
-------------- (c = 0)
----------0,0 (c = 8)
------------ (c = 0)
------------0 (c = 4)
-------------- (c = 0)
------------0 (c = 4)
-------------- (c = 0)
--------1,1 (c = 28)
---------- (c = 0)
----------1 (c = 14)
------------ (c = 0)
------------0 (c = 4)
-------------- (c = 0)
----------1 (c = 14)
------------ (c = 0)
------------0 (c = 4)
-------------- (c = 0)
----------0,1 (c = 18)
------------ (c = 0)
------------0 (c = 4)
-------------- (c = 0)
------------1 (c = 14)
-------------- (c = 0)
--------------0 (c = 4)"
`;

exports[`snapshot: 6 1`] = `
"4,4,1,2,2,2,5,3,3,3,0,5,1,0,4 (c = 450)
--0,0,1,1,2,2,2,3,3,3,4,4,4,5,5 (c = 450)
---- (c = 0)
----0,0,1,1,2,2,2 (c = 108)
------ (c = 0)
------0,0,1 (c = 22)
-------- (c = 0)
--------0 (c = 4)
---------- (c = 0)
--------0,0 (c = 8)
---------- (c = 0)
----------0 (c = 4)
------------ (c = 0)
----------0 (c = 4)
------------ (c = 0)
--------0 (c = 4)
---------- (c = 0)
--------1 (c = 14)
---------- (c = 0)
----------0 (c = 4)
------------ (c = 0)
--------0,1 (c = 18)
---------- (c = 0)
----------0 (c = 4)
------------ (c = 0)
----------1 (c = 14)
------------ (c = 0)
------------0 (c = 4)
-------------- (c = 0)
----------0,0 (c = 8)
------------ (c = 0)
------------0 (c = 4)
-------------- (c = 0)
------------0 (c = 4)
-------------- (c = 0)
--------0,1 (c = 18)
---------- (c = 0)
----------0 (c = 4)
------------ (c = 0)
----------1 (c = 14)
------------ (c = 0)
------------0 (c = 4)
-------------- (c = 0)
----------0,0 (c = 8)
------------ (c = 0)
------------0 (c = 4)
-------------- (c = 0)
------------0 (c = 4)
-------------- (c = 0)
--------0,0,0 (c = 12)
---------- (c = 0)
----------0 (c = 4)
------------ (c = 0)
----------0,0 (c = 8)
------------ (c = 0)
------------0 (c = 4)
-------------- (c = 0)
------------0 (c = 4)
-------------- (c = 0)
----------0 (c = 4)
------------ (c = 0)
----------0 (c = 4)
------------ (c = 0)
----------0,0 (c = 8)
------------ (c = 0)
------------0 (c = 4)
-------------- (c = 0)
------------0 (c = 4)
-------------- (c = 0)
----------0,0 (c = 8)
------------ (c = 0)
------------0 (c = 4)
-------------- (c = 0)
------------0 (c = 4)
-------------- (c = 0)
------0,0,1,1,2 (c = 60)
-------- (c = 0)
--------0,0 (c = 8)
---------- (c = 0)
----------0 (c = 4)
------------ (c = 0)
----------0 (c = 4)
------------ (c = 0)
--------0,0,1 (c = 22)
---------- (c = 0)
----------0 (c = 4)
------------ (c = 0)
----------0,0 (c = 8)
------------ (c = 0)
------------0 (c = 4)
-------------- (c = 0)
------------0 (c = 4)
-------------- (c = 0)
----------0 (c = 4)
------------ (c = 0)
----------1 (c = 14)
------------ (c = 0)
------------0 (c = 4)
-------------- (c = 0)
----------0,1 (c = 18)"
`;

exports[`snapshot: 7 1`] = `
"1,7,6,1,1,4,7,6,3,4,5,0,1 (c = 512)
--0,1,1,1,1,3,4,4,5,6,6,7,7 (c = 512)
---- (c = 0)
----0,1,1,1,1,3 (c = 94)
------ (c = 0)
------0,1,1 (c = 32)
-------- (c = 0)
--------0 (c = 4)
---------- (c = 0)
--------0,1 (c = 18)
---------- (c = 0)
----------0 (c = 4)
------------ (c = 0)
----------1 (c = 14)
------------ (c = 0)
------------0 (c = 4)
-------------- (c = 0)
----------0,0 (c = 8)
------------ (c = 0)
------------0 (c = 4)
-------------- (c = 0)
------------0 (c = 4)
-------------- (c = 0)
--------1 (c = 14)
---------- (c = 0)
----------0 (c = 4)
------------ (c = 0)
--------1 (c = 14)
---------- (c = 0)
----------0 (c = 4)
------------ (c = 0)
--------0,1 (c = 18)
---------- (c = 0)
----------0 (c = 4)
------------ (c = 0)
----------1 (c = 14)
------------ (c = 0)
------------0 (c = 4)
-------------- (c = 0)
----------0,0 (c = 8)
------------ (c = 0)
------------0 (c = 4)
-------------- (c = 0)
------------0 (c = 4)
-------------- (c = 0)
--------1,1 (c = 28)
---------- (c = 0)
----------1 (c = 14)
------------ (c = 0)
------------0 (c = 4)
-------------- (c = 0)
----------1 (c = 14)
------------ (c = 0)
------------0 (c = 4)
-------------- (c = 0)
----------0,1 (c = 18)
------------ (c = 0)
------------0 (c = 4)
-------------- (c = 0)
------------1 (c = 14)
-------------- (c = 0)
--------------0 (c = 4)
---------------- (c = 0)
------------0,0 (c = 8)
-------------- (c = 0)
--------------0 (c = 4)
---------------- (c = 0)
--------------0 (c = 4)
---------------- (c = 0)
----------1,0 (c = 18)
------------0,1 (c = 18)
-------------- (c = 0)
--------------0 (c = 4)
---------------- (c = 0)
--------------1 (c = 14)
---------------- (c = 0)
----------------0 (c = 4)
------------------ (c = 0)
--------------0,0 (c = 8)
---------------- (c = 0)
----------------0 (c = 4)
------------------ (c = 0)
----------------0 (c = 4)
------------------ (c = 0)
------------ (c = 0)
------------0 (c = 4)
-------------- (c = 0)
------------1 (c = 14)
-------------- (c = 0)
--------------0 (c = 4)
---------------- (c = 0)
------------0,0 (c = 8)
-------------- (c = 0)
--------------0 (c = 4)
---------------- (c = 0)
--------------0 (c = 4)
---------------- (c = 0)
--------0,0,1 (c = 22)
---------- (c = 0)
----------0 (c = 4)"
`;

exports[`snapshot: 8 1`] = `
"6,3,1,3,5,5,1 (c = 268)
--1,1,3,3,5,5,6 (c = 268)
---- (c = 0)
----1,1,3 (c = 62)
------ (c = 0)
------1 (c = 14)
-------- (c = 0)
--------0 (c = 4)
---------- (c = 0)
------1,1 (c = 28)
-------- (c = 0)
--------1 (c = 14)
---------- (c = 0)
----------0 (c = 4)
------------ (c = 0)
--------1 (c = 14)
---------- (c = 0)
----------0 (c = 4)
------------ (c = 0)
--------0,1 (c = 18)
---------- (c = 0)
----------0 (c = 4)
------------ (c = 0)
----------1 (c = 14)
------------ (c = 0)
------------0 (c = 4)
-------------- (c = 0)
----------0,0 (c = 8)
------------ (c = 0)
------------0 (c = 4)
-------------- (c = 0)
------------0 (c = 4)
-------------- (c = 0)
--------1,0 (c = 18)
----------0,1 (c = 18)
------------ (c = 0)
------------0 (c = 4)
-------------- (c = 0)
------------1 (c = 14)
-------------- (c = 0)
--------------0 (c = 4)
---------------- (c = 0)
------------0,0 (c = 8)
-------------- (c = 0)
--------------0 (c = 4)
---------------- (c = 0)
--------------0 (c = 4)
---------------- (c = 0)
---------- (c = 0)
----------0 (c = 4)
------------ (c = 0)
----------1 (c = 14)
------------ (c = 0)
------------0 (c = 4)
-------------- (c = 0)
----------0,0 (c = 8)
------------ (c = 0)
------------0 (c = 4)
-------------- (c = 0)
------------0 (c = 4)
-------------- (c = 0)
------1 (c = 14)
-------- (c = 0)
--------0 (c = 4)
---------- (c = 0)
------3 (c = 34)
-------- (c = 0)
--------0 (c = 4)
---------- (c = 0)
--------1 (c = 14)
---------- (c = 0)
----------0 (c = 4)
------------ (c = 0)
--------2 (c = 24)
---------- (c = 0)
----------0 (c = 4)
------------ (c = 0)
----------1 (c = 14)
------------ (c = 0)
------------0 (c = 4)
-------------- (c = 0)
------1,3 (c = 48)
-------- (c = 0)
--------1 (c = 14)
---------- (c = 0)
----------0 (c = 4)
------------ (c = 0)
--------3 (c = 34)
---------- (c = 0)
----------0 (c = 4)
------------ (c = 0)
----------1 (c = 14)
------------ (c = 0)
------------0 (c = 4)
-------------- (c = 0)
----------2 (c = 24)
------------ (c = 0)
------------0 (c = 4)
-------------- (c = 0)
------------1 (c = 14)"
`;

exports[`snapshot: 9 1`] = `
"1,9,8,9,5,2,1 (c = 378)
--1,1,2,5,8,9,9 (c = 378)
---- (c = 0)
----1,1,2 (c = 52)
------ (c = 0)
------1 (c = 14)
-------- (c = 0)
--------0 (c = 4)
---------- (c = 0)
------1,1 (c = 28)
-------- (c = 0)
--------1 (c = 14)
---------- (c = 0)
----------0 (c = 4)
------------ (c = 0)
--------1 (c = 14)
---------- (c = 0)
----------0 (c = 4)
------------ (c = 0)
--------0,1 (c = 18)
---------- (c = 0)
----------0 (c = 4)
------------ (c = 0)
----------1 (c = 14)
------------ (c = 0)
------------0 (c = 4)
-------------- (c = 0)
----------0,0 (c = 8)
------------ (c = 0)
------------0 (c = 4)
-------------- (c = 0)
------------0 (c = 4)
-------------- (c = 0)
--------1,0 (c = 18)
----------0,1 (c = 18)
------------ (c = 0)
------------0 (c = 4)
-------------- (c = 0)
------------1 (c = 14)
-------------- (c = 0)
--------------0 (c = 4)
---------------- (c = 0)
------------0,0 (c = 8)
-------------- (c = 0)
--------------0 (c = 4)
---------------- (c = 0)
--------------0 (c = 4)
---------------- (c = 0)
---------- (c = 0)
----------0 (c = 4)
------------ (c = 0)
----------1 (c = 14)
------------ (c = 0)
------------0 (c = 4)
-------------- (c = 0)
----------0,0 (c = 8)
------------ (c = 0)
------------0 (c = 4)
-------------- (c = 0)
------------0 (c = 4)
-------------- (c = 0)
------1 (c = 14)
-------- (c = 0)
--------0 (c = 4)
---------- (c = 0)
------2 (c = 24)
-------- (c = 0)
--------0 (c = 4)
---------- (c = 0)
--------1 (c = 14)
---------- (c = 0)
----------0 (c = 4)
------------ (c = 0)
------1,2 (c = 38)
-------- (c = 0)
--------1 (c = 14)
---------- (c = 0)
----------0 (c = 4)
------------ (c = 0)
--------2 (c = 24)
---------- (c = 0)
----------0 (c = 4)
------------ (c = 0)
----------1 (c = 14)
------------ (c = 0)
------------0 (c = 4)
-------------- (c = 0)
--------0,2 (c = 28)
---------- (c = 0)
----------0 (c = 4)
------------ (c = 0)
----------2 (c = 24)
------------ (c = 0)
------------0 (c = 4)
-------------- (c = 0)
------------1 (c = 14)
-------------- (c = 0)
--------------0 (c = 4)
---------------- (c = 0)
----------0,0 (c = 8)"
`;

exports[`snapshot: 10 1`] = `
"4,7,1 (c = 132)
--1,4,7 (c = 132)
---- (c = 0)
----1 (c = 14)
------ (c = 0)
------0 (c = 4)
-------- (c = 0)
----1,4 (c = 58)
------ (c = 0)
------1 (c = 14)
-------- (c = 0)
--------0 (c = 4)
---------- (c = 0)
------4 (c = 44)
-------- (c = 0)
--------0 (c = 4)
---------- (c = 0)
--------2 (c = 24)
---------- (c = 0)
----------0 (c = 4)
------------ (c = 0)
----------1 (c = 14)
------------ (c = 0)
------------0 (c = 4)
-------------- (c = 0)
--------3 (c = 34)
---------- (c = 0)
----------0 (c = 4)
------------ (c = 0)
----------1 (c = 14)
------------ (c = 0)
------------0 (c = 4)
-------------- (c = 0)
----------2 (c = 24)
------------ (c = 0)
------------0 (c = 4)
-------------- (c = 0)
------------1 (c = 14)
-------------- (c = 0)
--------------0 (c = 4)
---------------- (c = 0)
------0,4 (c = 48)
-------- (c = 0)
--------0 (c = 4)
---------- (c = 0)
--------4 (c = 44)
---------- (c = 0)
----------0 (c = 4)
------------ (c = 0)
----------2 (c = 24)
------------ (c = 0)
------------0 (c = 4)
-------------- (c = 0)
------------1 (c = 14)
-------------- (c = 0)
--------------0 (c = 4)
---------------- (c = 0)
----------3 (c = 34)
------------ (c = 0)
------------0 (c = 4)
-------------- (c = 0)
------------1 (c = 14)
-------------- (c = 0)
--------------0 (c = 4)
---------------- (c = 0)
------------2 (c = 24)
-------------- (c = 0)
--------------0 (c = 4)
---------------- (c = 0)
--------------1 (c = 14)
---------------- (c = 0)
----------------0 (c = 4)
------------------ (c = 0)
--------0,0 (c = 8)
---------- (c = 0)
----------0 (c = 4)
------------ (c = 0)
----------0 (c = 4)
------------ (c = 0)
--------0,2 (c = 28)
---------- (c = 0)
----------0 (c = 4)
------------ (c = 0)
----------2 (c = 24)
------------ (c = 0)
------------0 (c = 4)
-------------- (c = 0)
------------1 (c = 14)
-------------- (c = 0)
--------------0 (c = 4)
---------------- (c = 0)
----------0,0 (c = 8)
------------ (c = 0)
------------0 (c = 4)
-------------- (c = 0)
------------0 (c = 4)
-------------- (c = 0)
----------0,1 (c = 18)
------------ (c = 0)
------------0 (c = 4)"
`;
